...
                    }
                }
                .listStyle(.plain)
                .padding(.horizontal, horizontalSizeClass == .regular ? -20 : 0)
            }
            .searchable(text: $viewModel.searchText)
            .navigationTitle("Cities")
            .task {
                await viewModel.loadInitialDataIfNeeded()
             }
            .navigationDestination(item: $selectedCityForMap, destination: { city in
                MapView(city: city)
            })
            .sheet(item: $showingCityDetail) { city in
                NavigationStack {
                    CityDetailView(city: city)
                        .navigationTitle("Details: \(city.name)")
                        .toolbar {
                            ToolbarItem(placement: .navigationBarLeading) {
                                Button("Done") { showingCityDetail = nil }
                            }
                        }
                }
            }
        }
    }
...
